<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp">

        <TableLayout
            android:id="@+id/buttonContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.artifexdigital.android.beinningandroid.MainActivity"
            tools:showIn="@layout/activity_main"
            android:stretchColumns="1">

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_increment_button"
                    android:onClick="startIncrementButton"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_image_view_example"
                    android:onClick="startImageView"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_edit_text_example"
                    android:onClick="startEditTextExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_checkbox_example"
                    android:onClick="startCheckBoxExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_switch_example"
                    android:onClick="startSwitchExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_radio_button_group_example"
                    android:onClick="startRadioButtonGroupExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_clocks_example"
                    android:onClick="startClocksExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_seek_bar_example"
                    android:onClick="startSeekBarExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_relative_layout_example"
                    android:onClick="startRelativeLayoutExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_relative_overlap_example"
                    android:onClick="startRelativeOverlapExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_linear_layout_example"
                    android:onClick="startLinearLayoutExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_table_layout_example"
                    android:onClick="startTableLayoutExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_list_view_example"
                    android:onClick="startListViewExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_grid_view_example"
                    android:onClick="startGridViewExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_spinner_example"
                    android:onClick="startSpinnerExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_autocomplete_text_view_example"
                    android:onClick="startAutocompleteTextViewExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_ime_example1"
                    android:onClick="startIMEExample1"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_optionMenu_example"
                    android:onClick="startOptionMenuExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_menu_xml_example"
                    android:onClick="startMenuXMLExample"/>
            </TableRow>

            <TableRow>
                <TextView/>
                <Button
                    android:text="@string/text_popup_examples"
                    android:onClick="startPopupExample"/>
            </TableRow>

        </TableLayout>
    </ScrollView>
</RelativeLayout>